Feature/sql compiler engine (#51)
* change acrhitecture to CTE complier